# Terradiff

./: .gitignore  CHANGELOG.md  Cargo.toml  Justfile  README.md  demo.sh  env.example  live_demo.sh  rust-toolchain.toml  sbom.xml  terradrift.dev.toml  terradrift.schema.json  terradrift.toml.example
.github/workflows/: ci.yml
crates/terradrift/: Cargo.toml  sbom-test.xml  sbom-test2.xml  terradrift.cdx.xml
crates/terradrift/src/: cli.rs  config.rs  lib.rs  main.rs  orchestrator.rs  provider.rs  sink.rs  terraform.rs
crates/terradrift/tests/: e2e.rs
docs/: RELEASE_NOTES_v0.1.0-rc1.md
