[package]
name = "terradrift"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
zip = { workspace = true }
num_cpus = { workspace = true }
tokio-stream = "0.1"
futures = "0.3"
tokio-util = { workspace = true }
owo-colors = "3"
tabled = { version = "0.15", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"

which = "4"
dirs = "5"

[features]
default = ["mock"]
mock = []
s3 = ["aws-sdk-s3", "aws-config"]
azure = ["azure_storage", "azure_storage_blobs"]
gcs = ["gcp_auth", "percent-encoding"]
man = ["clap_mangen"]

[dependencies.aws-config]
version = "1"
default-features = false
optional = true
features = ["rustls"]

[dependencies.aws-sdk-s3]
version = "1"
default-features = false
optional = true
features = ["rustls"]

[dependencies.clap_mangen]
version = "0.2"
optional = true

[dependencies.azure_storage]
version = "0.21"
optional = true

[dependencies.azure_storage_blobs]
version = "0.21"
optional = true

[dependencies.gcp_auth]
version = "0.12.3"
optional = true

[dependencies.percent-encoding]
version = "2"
optional = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
assert_matches = "1"
assert_cmd = "2"
predicates = "3"

[[bin]]
name = "gen-man"
path = "src/bin/gen_man.rs"
required-features = ["man"] 